# uniffi-2282

./: README.md  build.sh
countries/: Cargo.toml  uniffi.toml
countries-import/: Cargo.toml  uniffi.toml
countries-import/src/: lib.rs
countries/src/: lib.rs
map-north-america/: Cargo.toml  uniffi.toml
map-north-america/src/: lib.rs
org/example/countries/: countries.kt
org/example/countries-import/: countries_import.kt
org/example/mapna/: map_na.kt
swift/: countries.swift  countriesFFI.h  countriesFFI.modulemap  countries_import.swift  countries_importFFI.h  countries_importFFI.modulemap  map_na.swift  map_naFFI.h  map_naFFI.modulemap
