[package]
name = "countries_import"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "lib", "staticlib"]
name = "countries_import"

[features]
default = ["uniffi/cli"]

[dependencies]
countries = { path = "../countries/" }
uniffi = { version = "=0.29.1" }

[build-dependencies]
uniffi = { version = "=0.29.1", features = ["build"] }
