[package]
name = "map-north-america"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "map_na"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
countries = { path = "../countries/" }
uniffi = { version = "=0.29.1" }

[build-dependencies]
uniffi = { version = "=0.29.1", features = ["build"] }
