[package]
name = "map-north-america"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "map_na"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
countries_import = { path = "../countries-import/" }
uniffi = { version = "=0.29.1" }

[build-dependencies]
uniffi = { version = "=0.29.1", features = ["build"] }

[profile.release-smaller]
inherits = "release"
opt-level = 'z'      # Optimize for size.
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Reduce number of codegen units to increase optimizations.
# panic = "abort"      # Abort on panic
strip = "debuginfo" # Partially strip symbols from binary
